# aspex1

./: .dockerignore  .gitignore  Dockerfile  ERD  README.md  alembic.ini  app.Dockerfile  db.Dockerfile  docker-compose.yml  init.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 7d8f8b3a6a19_initial_migration.py  808fd82e9b34_remove_is_booked_from_table.py  a457344035de_initial_migration.py  a79ab39bc0d4_initial_migration.py  bfa5668dfdbf_add_default_val_for_capacity_in_table.py  c7792e92b470_is_active_field_added_to_booking_and_.py  e27b334e53a9_initial_migration.py
app/: main.py
app/api/routers/: auth.py  booking.py  customer.py  table.py
app/api/utils/: auth.py  booking.py  customer.py  table.py
app/db/: database.py
app/db/models/: __init__.py  booking.py  customer.py
app/db/schemas/: booking.py  customer.py
